Keep dokka as 1.9.10

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   </modules>
   <properties>
     <kotlin.version>2.0.0</kotlin.version>
+    <dokka.version>1.9.10</dokka.version>
     <jvm.version>11</jvm.version>
   </properties>
   <build>
@@ -54,13 +55,13 @@
       <plugin>
         <groupId>org.jetbrains.dokka</groupId>
         <artifactId>dokka-maven-plugin</artifactId>
-        <version>${kotlin.version}</version>
+        <version>${dokka.version}</version>
         <configuration>
           <dokkaPlugins>
             <plugin>
               <groupId>org.jetbrains.dokka</groupId>
               <artifactId>kotlin-as-java-plugin</artifactId>
-              <version>${kotlin.version}</version>
+              <version>${dokka.version}</version>
             </plugin>
           </dokkaPlugins>
         </configuration>
